# top_assist

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  NOTICE  Procfile.manual  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: _checks.yaml  pr.yaml  secops.yml
alembic/: README.md  env.py
alembic/versions/: 2024_04_12_1354-713caec2649e_initial_migration.py  2024_04_26_1717-04dc5d59ccc1_add_pagedata.py  2024_04_26_1725-972428018c97_bookmarkedconversation.py  2024_04_26_1727-7d601a62ec0e_quizquestion.py  2024_04_26_1728-0b28658a6173_qainteraction.py  2024_04_26_1732-4fd21f3125fc_space.py  2024_04_26_1734-eda3f2766ce1_userscore.py  2024_04_30_1104-290dab2b2e15_relationship_space_pagedata.py  2024_05_05_1057-4817999dd648_make_page_content_and_comments_not_null.py  2024_05_09_1817-79a019562e70_add_posted_confluence_page_ids.py  2024_05_09_1822-c8e89bda4de7_remove_unused_page_timestamp_from_space.py  2024_05_13_1740-1b5fc5501eae_add_interaction_state_info.py  2024_05_13_1859-f87f24dea885_make_qa_interactions_assistant_thread_.py  2024_05_14_1334-55d2e9ed2fe6_add_embedded_timestamp_to_qa.py  2024_05_16_1717-cf78760af45a_make_bookmarked_conversation_content_.py  2024_05_16_1803-5704d834b7b6_track_users_awarded_with_luminary_points.py  2024_05_17_1217-0cb90fcc57c7_track_when_quiz_question_is_checkmarked.py  2024_05_17_1529-dc70c5e7f152_add_user_feedback_score.py  2024_05_30_1141-d04f3391155d_add_slack_channels.py  2024_06_05_1425-89e5323369b9_simplify_user_score_to_like_dislike.py  2024_06_06_0737-404e15433f31_add_service_cooldowns.py  2024_06_06_1152-fe7527dab092_add_timezone_in_timestamp_columns.py  2024_06_06_1402-ce89b0147ed4_add_user_feedback_score_indexes.py  2024_06_12_1748-820f66a7f6b8_add_users_table.py  2024_06_14_1651-01987d7a151b_add_state_to_user.py  2024_06_14_1702-e3c0780adab9_add_auth_message_id.py  2024_06_17_1731-26fa7f71ffe6_recreate_user_table_as_user_auth.py  2024_07_02_1807-6d6a7ca37e75_remove_gamification_feature.py  2024_07_02_1842-e2053a546a43_remove_bookmark_reaction_feature.py  2024_07_02_1913-c4a3831f57ef_remove_knowledge_gap_feature.py  2024_07_05_2046-ef9c73e37adf_removeembeddingsforqa.py  2024_08_22_1517-7ca9877d2017_add_content_length.py
builder/: Dockerfile
docker/grafana/import_dashboards/: questions_scores.json
docker/prometheus/config/: prometheus.yml
documentation/: slack_app_manifest_installation_guide.md
documentation/slack/: manifest.yml
tests/integrated/: conftest.py
tests/integrated/chat_bot/: test_channels.py
tests/integrated/knowledge_base/: test_importer.py  test_stats_exporter.py
tests/integrated/semantic_router/: factory.py  test_question_generator.py  test_router.py  test_tool_choice_agent.py  test_tool_executor.py
tests/unit/: conftest.py  test_configuration.py  test_sample.py  test_tracer.py
tests/unit/auth/: conftest.py  test_provider.py
tests/unit/knowledge_base/: factory.py  test_query.py
tests/unit/logging/: test_json_formatter.py  test_text_formatter.py
tests/unit/open_ai/: test_embeddings.py  test_query_chatgpt.py
tests/unit/slack/: test_bot_runner.py
tests/unit/utils/: test_metrics.py  test_scheduler.py  test_sentry_notifier.py
tests/utils/: factory.py  matchers.py
tests/utils/vector/: __init__.py  qdrant.py  weaviate.py
top_assist/: __init__.py  configuration.py
top_assist/auth/: _sign_in_context.py  provider.py  sign_in_flow.py
top_assist/chat_bot/: __init__.py  __main__.py  channels.py  router.py
top_assist/chat_bot/tasks/: question.py  user_feedback_score.py
top_assist/cli/: __main__.py  import_spaces.py  list_spaces.py  update_pages.py
top_assist/confluence/: README.md  _client.py  oauth.py  pages.py  policy.py  profile.py  retriever.py  spaces.py
top_assist/database/: channels.py  database.py  interactions.py  pages.py  service_cooldowns.py  spaces.py  user_auth.py  user_feedback_scores.py
top_assist/database/_vector/: engine.py  pages.py
top_assist/knowledge_base/: importer.py  query.py  stats_exporter.py
top_assist/models/: __init__.py  base.py  channel.py  page_data.py  qa_interaction.py  service_cooldown.py  space.py  user_auth.py  user_feedback_score.py
top_assist/open_ai/: embeddings.py  query.py
top_assist/open_ai/assistants/: manager.py  templates.py  threads.py
top_assist/semantic_router/: README.md  router.py  types.py
top_assist/semantic_router/nodes/: question_generator.py  tool_choice_agent.py  (+1 more)
top_assist/slack/: _client.py  bot_runner.py  channels.py  messages.py  profile.py
top_assist/tui/: __main__.py  assistants.py  confluence.py  main_menu.py
top_assist/utils/: cypher.py  metrics.py  scheduler.py  sentry_notifier.py  service_cooldown.py  tracer.py
top_assist/web/: __main__.py  app.py  router.py
(+36 files in other folders)
